cmake_minimum_required(VERSION 3.23)
project(Loop)

set(CMAKE_CXX_STANDARD 17)

add_executable(Loop# main.cpp
        #2739.cpp
        #10950.cpp
        #8393.cpp
        #25304.cpp
        #25314.cpp
        #15552.cpp
        #11021.cpp
        #11022.cpp
        #2438.cpp
        #2439.cpp
        10952.cpp)
